--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="app-header">
           <h1>신나고 재밌는 발명의 세계</h1>
           <div class="header-visual">
-            <img src="/fun.jpg" alt="신나고 재밌는 발명의 세계" />
+            <img src="/src/images/main.jpg" alt="신나고 재밌는 발명의 세계" />
           </div>
           <p class="subtitle">원하는 단계를 선택해서 활동을 시작해 보세요!</p>
         </header>
@@ -72,6 +72,15 @@
           <p class="question">
             일상생활에서 불편했던 물건을 더 불편하게 만들어봅시다.
           </p>
+          <div class="form-group">
+            <label>발명 예시</label>
+            <div class="example-image-container" style="margin-bottom: 1rem; text-align: center;">
+              <img src="/src/images/level1.png" alt="불편한 발명 예시" style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px; padding: 10px; background: #f9f9f9;" />
+            </div>
+            <p style="text-align: center; color: #666; font-size: 1rem; margin-bottom: 1.5rem;">
+              예를 들어 꼬불꼬불 올리기 힘든 자크!
+            </p>
+          </div>
           <div class="form-group">
             <label>발명 아이디어 스케치하기</label>
             <div class="sketch-container">
@@ -201,6 +210,18 @@
             <h3>내가 뽑은 발명 카드</h3>
             <p id="l2_summaryCard" class="summary-text">아직 카드를 뽑지 않았어요.</p>
           </div>
+          <p class="question" style="margin: 1.5rem 0;">
+            불편했던 물건을 편리하게 발명해봅시다.
+          </p>
+          <div class="form-group">
+            <label>발명 예시</label>
+            <div class="example-image-container" style="margin-bottom: 1rem; text-align: center;">
+              <img src="/src/images/Level2 .png" alt="발명 아이디어 예시" style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px; padding: 10px; background: #f9f9f9;" />
+            </div>
+            <p style="text-align: center; color: #666; font-size: 1rem; margin-bottom: 1.5rem;">
+              꺾어서 모양을 바꿀 수 있는 숟가락!
+            </p>
+          </div>
           <div class="form-group">
             <label>발명 아이디어 스케치하기</label>
             <div class="sketch-container">
@@ -280,6 +301,9 @@
         <div class="card">
           <h2>발명할 문제</h2>
           <div class="problem-box">
+            <div class="problem-image-container" style="margin-bottom: 1rem; text-align: center;">
+              <img src="/src/images/Level3.jpg" alt="문제 상황 예시" style="max-width: 100%; height: auto; border: 1px solid #ddd; border-radius: 8px; padding: 10px; background: #f9f9f9;" />
+            </div>
             <p class="problem-text">
               선생님은 텀블러를 뚜껑 열고 사용하는 경우가 많은데, 자꾸 텀블러를 실수로 건들여서 커피를 쏟는 상황이 발생합니다.
             </p>
