Update index.html and main.js to enhance invention app functionality. Added example images for each level in the HTML, updated image paths, and refined form data handling in JavaScript. Introduced new image assets for better visual representation of invention examples.

--- a/index.html
+++ b/index.html
@@ -376,17 +376,7 @@
       </section>
     </div>
 
-    <!-- 구글 폼 (숨김) - 나중에 entry 번호 수정 필요 -->
-    <form id="googleForm" method="POST" action="https://docs.google.com/forms/d/e/YOUR_FORM_ID/formResponse" style="display: none;">
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_level" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_studentNumber" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_studentName" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_problemText" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_inventionCard" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_description" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_sketchImage" />
-      <input type="hidden" name="entry.XXXXXXXXX" id="gf_teamMembers" />
-    </form>
+    <!-- 구글 폼은 JavaScript에서 레벨별로 동적으로 생성됩니다 -->
 
     <script type="module" src="/src/main.js"></script>
   </body>
